[package]
name = "netpingbench"
version = "0.1.0"
edition = "2021"


[dependencies]
async-stream = "0"
clap = { version = "4", features = ["derive"] }
prost = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0"
tonic = "0"
libc = "0"

[build-dependencies]
tonic-build = "0"
