[package]
name = "netpingbench"
version = "0.1.0"
edition = "2024"
publish = false

[lints.clippy]
nursery = "deny"
pedantic = "deny"
style = "deny"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0"
prost = "0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0"

[build-dependencies]
dlprotoc = "0"
tonic-build = "0"
